# mayavi-examples

./: .gitignore  PlotHDF5.py  README.md  README.rst  axes_example.py  chapman.m  example_scalar_field.py  gsim.m  lineclip.m  pytest.ini  setup.cfg  test_scalar_field.py  trait_handlers.patch  volumetrans.py
.github/workflows/: ci.yml  ci_macwin.yml
archive/: .travis.yml  boxesAB.m
matlab/: boxes.m  chapman.m  gsim.m
