[metadata]
name = mayavi-exmaples
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/mayavi-examples
description = Examples of Mayavi 3-D plotting from Python
keywords =
  3-D
  plot
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  mayavi
  numpy>=1.12

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
